# OpenCompute_Worker

./: .gitignore  Cargo.toml  Makefile  README.md
dynamic_code/: Cargo.toml
dynamic_code/src/: lib.rs
main_wasm/: Cargo.toml
main_wasm/src/: config.rs  gpu_init_rune_func.rs  lib.rs  thread_keep_alive.rs  thread_ws_send.rs
oc_worker/: Cargo.toml
oc_worker/src/: client_process.rs  gpu_func.rs  gpu_init.rs  gpu_shade.rs  protocol.rs  thread_test.rs  thread_ws_send.rs
pkg/: index.html  main_wasm.d.ts  main_wasm.js  oc_worker.d.ts  oc_worker.js  oc_worker_bg.wasm.d.ts
public/: Cargo.toml
public/src/: lib_fake
route_websocket_client/: Cargo.toml
route_websocket_client/src/: lib.rs
thread_manager/: Cargo.toml
thread_manager/src/: lib.rs
wasm_thread_manager/: Cargo.toml
wasm_thread_manager/src/: lib.rs
